# listener_effort_api

./: .env.example  .gitignore  README.md  app.py  config.py  items.py  lepm.py  main.py  preprocess.py  pyproject.toml  requirements.txt  utils.py  whisper_features.py  whisper_transcripts.py
models/: Speech_study_LinearRegression05_model.joblib  Speech_study_LinearRegression05_model_metadata.json
notebooks/: [2025-05-13] playground.ipynb  [2025-06-09] Test model.ipynb
tests/: test.py
