[tool.poetry]
name = "lepm_api"
version = "0.1.0"
description = ""
authors = ["ealsuser <julian@everythingals.org>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.15.0"
pandas = "^2.2.3"
fastapi = "^0.115.12"
whisper-timestamped = "^1.15.8"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
numpy = "2.0.0"
jiwer = "^3.1.0"
joblib = "^1.5.0"
scikit-learn = "^1.6.1"
requests = "^2.32.3"
streamlit = "^1.45.1"
python-multipart = "^0.0.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
